Added genre dropdown menu

--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
                     <form class="sort" id="sort">
                         <label for="sort-by">Sort by</label>
                         <select name="dropdown" id="dropdown">
-                        <option value="">All</option>
-                        <option value="oldRel">Old Release</option>
-                        <option value="newRel">New Release</option>
-                        <option onclick="sortCards()" value="priceLow">Price low</option>
-                        <option value="priceUp">Price high</option>
+                        <option value="">Genre</option>
+                        <option value="comedy">Comedy</option>
+                        <option value="animation">Animation</option>
+                        <option value="fantasy">Fantasy</option>
+                        <option value="adventure">Adventure</option>
+                        <option value="action">Action</option>
+                        <option value="romance">Romance</option>
+                        <option value="Horror">Horror</option>
                         </select>
                     </form>
                 </li>
@@ -37,12 +40,9 @@
         <div>        
         </div>  
     </header>
-    <main>
-        
+    <main>   
         <div id="library"> 
-
         </div>
-
     </main>
     
 </body>
