Hide h1 & moved wireframe to a folder

--- a/cart.html
+++ b/cart.html
@@ -16,11 +16,11 @@
     <nav>
             <ul class="navbar">
                 <li class="logo"><i>DVDeal</i></li>
-                <li class="cart"><a href="cart.html"><button id="gotocart">Total Items <i class="fa fa-shopping-basket
-                 aria-hidden="true"></i><span> 0 </span> </button></a></li>  
-            </ul>                        
+                <li class="cart"><a href="cart.html"><button id="gotocart">Total Items <i class=`fa fa-shopping-basket
+                 aria-hidden="true"`></i><span> 0 </span> </button></a></li>  
+                </ul>                        
         </nav> 
-    <h1>Your Cart</h1>
+    <h1 id="yourCart">Your Cart</h1>
     <div class="container"> 
     <div class="shopping-basket" id="shopping-basket"></div>
     <div class="total" id="total">
